force-app/main/default/objects/Class__c/fields/Advance_Billing__c.field-meta.xml
<CustomField>
    <fullName>Advance_Billing__c</fullName>
    <label>Advance Billing Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>