force-app/main/default/objects/Class__c/fields/Advance_Billing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Advance_Billing_Unit__c</fullName>
    <label>Advance Billing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Week(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>