force-app/main/default/objects/Class__c/fields/Advance_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Advance_Scheduling__c</fullName>
    <label>Advance Scheduling Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>