force-app/main/default/objects/Class__c/fields/Advance_Scheduling_Unit__c.field-meta.xml
<CustomField>
    <fullName>Advance_Scheduling_Unit__c</fullName>
    <label>Advance Scheduling Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Frequency__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Week(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
            <value>
                <fullName>Term(s)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>