force-app/main/default/objects/Class__c/fields/Allow_Overbooking__c.field-meta.xml
<CustomField>
    <fullName>Allow_Overbooking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow enrollments to exceed capacity limit.</inlineHelpText>
    <label>Allow Overbooking</label>
    <type>Checkbox</type>
</CustomField>