force-app/main/default/objects/Class__c/fields/Auto_Billing__c.field-meta.xml
<CustomField>
    <fullName>Auto_Billing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Billing</label>
    <type>Checkbox</type>
</CustomField>