force-app/main/default/objects/Class__c/fields/Auto_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Auto_Schedule__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Schedule</label>
    <type>Checkbox</type>
</CustomField>