force-app/main/default/objects/Class__c/fields/Auto_Update_Module__c.field-meta.xml
<CustomField>
    <fullName>Auto_Update_Module__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Update Module</label>
    <type>Checkbox</type>
</CustomField>