force-app/main/default/objects/Class__c/fields/Cancelled_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Sessions__c</fullName>
    <label>Cancelled Sessions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>