force-app/main/default/objects/Class__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <inlineHelpText>Maximum number of students that can be enrolled. &apos;Allow Overbooking&apos; checkbox can be used to allow enrolling more than the capacity limit.</inlineHelpText>
    <label>Capacity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>