force-app/main/default/objects/Class__c/fields/Completed_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Completed_Sessions__c</fullName>
    <label>Completed Sessions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>