force-app/main/default/objects/Class__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <inlineHelpText>Links class to a course.</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>