force-app/main/default/objects/Class__c/fields/Current_Course_Module__c.field-meta.xml
<CustomField>
    <fullName>Current_Course_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Module Lesson</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Classes (Current Module Lesson)</relationshipLabel>
    <relationshipName>Classes3</relationshipName>
    <type>Lookup</type>
</CustomField>