force-app/main/default/objects/Class__c/fields/Current_Module_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Current_Module_Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Module Lesson</label>
    <referenceTo>Module_Lesson__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>