force-app/main/default/objects/Class__c/fields/Days_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Week__c</fullName>
    <label>Days of Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>