force-app/main/default/objects/Class__c/fields/Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Minutes__c</fullName>
    <label>Duration in Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration</valueSetName>
    </valueSet>
</CustomField>