force-app/main/default/objects/Class__c/fields/Duration_Unit__c.field-meta.xml
<CustomField>
    <fullName>Duration_Unit__c</fullName>
    <inlineHelpText>Select &apos;Hours&apos; if the input in the &apos;Duration&apos; field is in hours. To add a class which has 2 hour sessions. Select &apos;Hours&apos; and input &apos;2&apos; in &apos;Duration&apos; field. Same thing can be achieved by selecting &apos;Minutes&apos; and &apos;120&apos; in &apos;Duration&apos; field.</inlineHelpText>
    <label>Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration_Unit</valueSetName>
    </valueSet>
</CustomField>