force-app/main/default/objects/Class__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>End Date of the class. End Date will be automatically updated when the sessions for this class are scheduled.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>