force-app/main/default/objects/Class__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>Start_Time__c +  (Duration__c*60000)
/*IF(  ISPICKVAL(Duration_Unit__c, &apos;Minutes&apos;)  , educato__Start_Time__c +  (educato__Duration__c*60000) ,  educato__Start_Time__c +  (educato__Duration__c*3600000))*/</formula>
    <inlineHelpText>The system will calculate this field based on &apos;Duration Unit&apos; and &apos;Duration&apos;.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>