force-app/main/default/objects/Class__c/fields/Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Enrollments__c</fullName>
    <label>Enrollments</label>
    <summaryForeignKey>Enrollment__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>