force-app/main/default/objects/Class__c/fields/Exclude_Public_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Public_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Holidays</label>
    <type>Checkbox</type>
</CustomField>