force-app/main/default/objects/Class__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <inlineHelpText>Format of the class - online or in-person (Classroom) class.</inlineHelpText>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>