force-app/main/default/objects/Class__c/fields/Last_Scheduled_ClassTerm__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled_ClassTerm__c</fullName>
    <label>Last Scheduled ClassTerm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>