force-app/main/default/objects/Class__c/fields/Last_Session_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Session_Scheduled_Date__c</fullName>
    <label>Last Session Scheduled Date</label>
    <type>Date</type>
</CustomField>