force-app/main/default/objects/Class__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Center where this class will be held.</inlineHelpText>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Classes (Location)</relationshipLabel>
    <relationshipName>Location_classes</relationshipName>
    <type>Lookup</type>
</CustomField>