force-app/main/default/objects/Class__c/fields/Next_Module_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Next_Module_Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Module Lesson</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Classes (Next Module Lesson)</relationshipLabel>
    <relationshipName>Classes2</relationshipName>
    <type>Lookup</type>
</CustomField>