force-app/main/default/objects/Class__c/fields/Next_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Schedule_Date__c</fullName>
    <description>System date populated based on Advanced scheduling considering  Last Session Date</description>
    <inlineHelpText>System date populated based on Advanced scheduling considering  Last Session Date</inlineHelpText>
    <label>Next Schedule Date</label>
    <type>Date</type>
</CustomField>