force-app/main/default/objects/Class__c/fields/Scheduled_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Sessions__c</fullName>
    <label>Scheduled Sessions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>