force-app/main/default/objects/Class__c/fields/Scheduled_Till__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Till__c</fullName>
    <description>This field is used to identify the date, till session records created.</description>
    <label>Scheduled Till</label>
    <type>Date</type>
</CustomField>