force-app/main/default/objects/Class__c/fields/Session_Color__c.field-meta.xml
<CustomField>
    <fullName>Session_Color__c</fullName>
    <label>Session Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#0070d2</fullName>
                <label>Navy Blue</label>
            </value>
            <value>
                <fullName>#C55A11</fullName>
                <label>Strong Orange</label>
            </value>
            <value>
                <fullName>#7489ef</fullName>
                <isActive>false</isActive>
                <label>Light Blue</label>
            </value>
            <value>
                <fullName>#8B008B</fullName>
                <isActive>false</isActive>
                <label>Purple</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>