force-app/main/default/objects/Class__c/fields/Sessions__c.field-meta.xml
<CustomField>
    <fullName>Sessions__c</fullName>
    <inlineHelpText>Number of Session used to define one Term (Term 1) of this class. The system will create subsequent Terms automatically using this definition (in Draft mode). You can edit subsequent terms as required.</inlineHelpText>
    <label>Number of Sessions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>