force-app/main/default/objects/Class__c/fields/Sessions_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Per_Day__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Sessions Per Day</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>