force-app/main/default/objects/Class__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Start Date of the class.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>