force-app/main/default/objects/Class__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>Start Time of this class on the days selected in &apos;Days of Week&apos;.</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>