force-app/main/default/objects/Class__c/fields/Starting_Module__c.field-meta.xml
<CustomField>
    <fullName>Starting_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Starting Module</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>