force-app/main/default/objects/Class__c/fields/Starting_Module_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Starting_Module_Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Starting Module Lesson</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Classes (Starting Module Lesson)</relationshipLabel>
    <relationshipName>Classes1</relationshipName>
    <type>Lookup</type>
</CustomField>