force-app/main/default/objects/Class__c/fields/Total_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions__c</fullName>
    <label>Total Sessions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>