force-app/main/default/objects/Class__c/validationRules/Common_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Common_Validation</fullName>
    <active>false</active>
    <description>Validation on Capacity, Sessions, Duration and Advance Scheduling</description>
    <errorConditionFormula>Capacity__c &lt;= 0  ||  
Sessions__c &lt;= 0</errorConditionFormula>
    <errorMessage>Please input valid information in Capacity and Sessions to proceed.</errorMessage>
</ValidationRule>