force-app/main/default/objects/Class__c/validationRules/EndDateShouldBeGreaterThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateShouldBeGreaterThanStartDate</fullName>
    <active>true</active>
    <description>End Date Should Be Greater Than Start Date</description>
    <errorConditionFormula>AND (NOT(ISBLANK(End_Date__c)),
					End_Date__c &lt; Start_Date__c)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date should be greater than Start Date</errorMessage>
</ValidationRule>