force-app/main/default/objects/Class__c/validationRules/FieldsRequiredInFixedClass.validationRule-meta.xml
<ValidationRule>
    <fullName>FieldsRequiredInFixedClass</fullName>
    <active>true</active>
    <description>If class is fixed then session,start date &amp; end date can not be blank</description>
    <errorConditionFormula>AND(ISPICKVAL(Type__c,&apos;Fixed&apos;),
OR(ISBLANK(Start_Date__c),
		ISBLANK(End_Date__c)))</errorConditionFormula>
    <errorMessage>Start Date &amp; End Date Fields are required for Fixed Class.</errorMessage>
</ValidationRule>