force-app/main/default/objects/Class__c/validationRules/StartDateMandatoryInMonthlyClass.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateMandatoryInMonthlyClass</fullName>
    <active>false</active>
    <description>If class is monthly then Start date can not be blank.</description>
    <errorConditionFormula>AND(ISPICKVAL(Frequency__c,&apos;Monthly&apos;),ISBLANK(Start_Date__c))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Field is required</errorMessage>
</ValidationRule>