force-app/main/default/objects/Class__c/validationRules/Validate_Class_Open_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Class_Open_Status</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(PRIORVALUE(Status__c),&apos;Draft&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;Open&apos;) &amp;&amp; Start_Date__c &lt; TODAY(), True, False)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date should be greater than or equals to today when Status changed to Open.</errorMessage>
</ValidationRule>