force-app/main/default/objects/Class__c/validationRules/Validate_Session_Per_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Session_Per_Day</fullName>
    <active>false</active>
    <errorConditionFormula>Sessions_Per_Day__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Sessions_Per_Day__c</errorDisplayField>
    <errorMessage>Session Per Day must be greater than 0.</errorMessage>
</ValidationRule>