force-app/main/default/objects/Class__c/validationRules/Validate_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Draft&apos;),  ISCHANGED(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status can&apos;t set as draft again.</errorMessage>
</ValidationRule>