force-app/main/default/objects/Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Teacher__c</columns>
    <columns>Type__c</columns>
    <columns>Frequency__c</columns>
    <columns>Days_of_Week__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>