force-app/main/default/objects/Class__c/listViews/All_Intakes.listView-meta.xml
<ListView>
    <fullName>All_Intakes</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Class__c.Intake</value>
    </filters>
    <label>All Intakes</label>
</ListView>