force-app/main/default/objects/Class__c/listViews/All_Ongoing_Classes.listView-meta.xml
<ListView>
    <fullName>All_Ongoing_Classes</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Teacher__c</columns>
    <columns>Sessions__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Ongoing</value>
    </filters>
    <label>All Ongoing Classes</label>
</ListView>