force-app/main/default/objects/Class__c/listViews/All_Open_Classes.listView-meta.xml
<ListView>
    <fullName>All_Open_Classes</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Teacher__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All Open Classes</label>
</ListView>